# wagtailsearch

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  runtests.py
.github/workflows/: test.yml
docs/: backends.md  conf.py  index.md  indexing.md  searching.md
modelsearch/: apps.py  index.py  models.py  utils.py
modelsearch/backends/: __init__.py  elasticsearch7.py  opensearch1.py
modelsearch/backends/database/: __init__.py
modelsearch/backends/database/mysql/: query.py
modelsearch/backends/database/sqlite/: query.py
modelsearch/management/commands/: update_index.py  wagtail_update_index.py
modelsearch/migrations/: 0001_initial.py  0002_customise_indexentry.py  0006_customise_indexentry.py
modelsearch/test/: settings.py
modelsearch/test/testapp/: apps.py  models.py
modelsearch/test/testapp/migrations/: 0001_initial.py  0002_bookunindexed.py
modelsearch/tests/: elasticsearch_common_tests.py  test_backends.py  test_db_backend.py  test_elasticsearch7_backend.py  test_index_functions.py  test_indexed_class.py  test_mysql_backend.py  test_opensearch1_backend.py  test_opensearch2_backend.py  test_page_search.py  test_postgres_backend.py  test_related_fields.py  test_sqlite_backend.py
